--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,23 +7,28 @@
   <script type="text/javascript" src="javascripts/jquery.cookie.js"></script>
   <script type="text/javascript" src="javascripts/angular.min.js"></script>
   <script src="/socket.io/socket.io.js"></script>
-  <script type="text/javascript" src="javascripts/datachange.lib.js"></script>
+  <script type="text/javascript" src="javascripts/service.lib.js"></script>
   <script type="text/javascript" src="javascripts/example.js"></script>
   <link type="text/css" rel="stylesheet" href="stylesheets/bootstrap.css">
 </head>
 <body>
-  <div class="row">
-    <form role="form"　class="form-inline">
-      <div class="form-group col-sm-6 col-md-6 col-md-offset-6">
-        <label for="type">データタイプ</label>
-        <input type="text" id="type">
-      </div>
-      <div class="form-group col-sm-6 col-md-6 col-md-offset-6">
-        <label for="data">データ</label>
-        <input type="text" id="data">
-      </div>
-    </form>
-    <div class="alert alert-success col-sm-6 col-md-6 col-md-offset-6" id="result"></div>
-  </div>
+
+
+
+  <nav class="navbar navbar-default" role="navigation">
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <form class="navbar-form navbar-left" method="post" >
+        <div class="form-group">
+          <label for="type">データタイプ</label>
+          <input type="text" id="type">
+        </div>
+        <div class="form-group">
+         <label for="data">データ</label>
+         <input type="text" id="data">
+       </div>
+       <button class="btn btn-primary" type="submit">提出</button>
+     </form>
+   </div>
+ </nav>
 </body>
 </html>
