--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -1,24 +1,21 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>登陆</title>
-<link type="text/css" rel="stylesheet" href="stylesheets/signin.css">
-<link type="text/css" rel="stylesheet" href="stylesheets/common.css">
+  <meta charset="utf-8">
+  <title>聊天室</title>
+  <link type="text/css" rel="stylesheet" href="stylesheets/bootstrap.css">
 </head>
 <body>
-  <div id="content">
-    <form style="margin-top:70px;" method="post">
-      <div class="form_line">
-        <div class="form_label">昵称：</div>
-        <input type="text" name="name" />
-      </div>
-      <div class="form_line">
-        <div class="form_label"></div>
-        <button class="button gray" type="submit">登录</button>
-        <button class="button gray" type="reset">取消</button>
-      </div>
-    </form>
-  </div>
+  <nav class="navbar navbar-default" role="navigation">
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <form class="navbar-form navbar-left" method="post" >
+        <div class="form-group">
+          <label for="name">ユーザー名</label>
+          <input type="text" name="name" id="name" />
+        </div>
+        <button class="btn btn-primary" type="submit">ログイン</button>
+      </form>
+    </div>
+  </nav>
 </body>
 </html>
